--- a/Day-1CounterApp/index.html
+++ b/Day-1CounterApp/index.html
@@ -17,9 +17,9 @@
             <span class="count">0</span>
             <hr>
             <div class="buttons">
-                <button class="subtract"><i class="fas fa-arrow-down"></i>Subtract</button>
-                <button class="reset"><i class="fas fa-spinner"></i>Reset</button>
-                <button class="add"><i class="fas fa-arrow-up"></i>Add</button>
+                <button class="subtract"><i class="subtract fas fa-arrow-down"></i>Subtract</button>
+                <button class="reset"><i class=" reset fas fa-spinner"></i>Reset</button>
+                <button class="add"><i class="add fas fa-arrow-up"></i>Add</button>
             </div>
         </div>
     </div>
